# ZGameClicker

./: .gitignore  README.md  config.py  get_coords.py  main.py  pyproject.toml
.github/: copilot-instructions.md
core/: __init__.py  controller.py  helper.py  logger_config.py  vision.py  window.py
tools/: gen_assets.py
yggdra/: __init__.py  assets_config.py  config.py  main.py
